--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
     color: #fff;
     padding: 20px 0;
     text-align: center;
-    border-bottom: 5px solid #e74c3c; /* Cor de destaque */
+    border-bottom: 5px solid #abdecb; /* Cor de destaque */
 }
 
 header h1 {
